--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.25.6/babel.min.js" 
         integrity="sha512-8M1WWEzuftS49rfh63fHz354qx+Pzvp3kcQVVTOxIdFSzjYC3I3vk5zgN0guAook97MQIZTfEdl9pUQTov9V6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-
+ 
     <script type="text/babel">
         function Titulo(){
             return (
                 <h1 clasName='form__titulo'>Login</h1>
+            )
+        }
+
+        function Subtitulo() {
+            return (
+                <h2 className='form__texto'>Boas-vindas! Faça seu login.</h2>
             )
         }
     </script>
