--- a/index.html
+++ b/index.html
@@ -28,15 +28,33 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  
     <script type="text/babel">
-        function Titulo(){
+        function Titulo({ children }){
             return (
-                <h1 className='form__titulo'>Login</h1>
+                <h1 className='form__titulo'>{children}</h1>
             )
         }
 
-        function Subtitulo() {
+        function Subtitulo({ children }) {
             return (
-                <h2 className='form__texto'>Boas-vindas! Faça seu login.</h2>
+                <h2 className='form__texto'>{children}</h2>
+            )
+        }
+
+        function CampoDeDigitacao({label, tipo, placeholder}) {
+            return (
+                <div className='form__campo-digitacao'>
+                    <label for='email'>{label}</label>
+                    <input type={tipo} 
+                        placeholder={placeholder}
+                        required
+                        id='email' />
+                </div>
+            )
+        }
+
+        function Botao({ children })  {
+            return (
+                <button type='submit' className='form__botao'>{children}</button>
             )
         }
 
@@ -46,22 +64,15 @@
                     <img src='img/imagem-login.png' alt='Uma mulher negra de cabelos crespos usando oculos e usando o computador'></img>
                     <section>
                         <form>
-                            <Titulo />
-                            <Subtitulo />
-                            <div className='form__campo-digitacao'>
-                                <label for='email'>E-mail ou usuário</label>
-                                <input type='email' 
-                                    placeholder='Digite seu e-mail ou usuário'
-                                    required
-                                    id='email' />
-                            </div>
-                            <div className='form__campo-digitacao'>
-                                <label for='senha'>Senha</label>
-                                <input type='password' 
-                                    placeholder='Digite sua senha'
-                                    required
-                                    id='senha' />
-                            </div>
+                            <Titulo>Login</Titulo>
+                            <Subtitulo>Boas-vindas! Faça seu login.</Subtitulo>
+                            <CampoDeDigitacao label='E-mail ou usário'
+                                tipo='email'
+                                placeholder='Digite o seu e-mail ou usuário'/>
+                            <CampoDeDigitacao label='senha'
+                                tipo='password'
+                                placeholder='Digite sua senha' />
+                            <Botao>Login</Botao>
                         </form>
                     </section>
                 </div>
