--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
             )
         }
 
-        function CampoDeDigitacao({label, tipo, placeholder}) {
+        function CampoDeDigitacao({label, tipo, placeholder, value, setValor}) {
             return (
                 <div className='form__campo-digitacao'>
-                    <label for='email'>{label}</label>
+                    <label for={tipo}>{label}</label>
                     <input type={tipo} 
                         placeholder={placeholder}
                         required
-                        id='email' />
+                        id={tipo} 
+                        value={value}
+                        onChange={(evento) => setValor(evento.target.value)}/>
                 </div>
             )
         }
@@ -59,19 +61,33 @@
         }
 
         function PaginaDeLogin() {
+            const [email, setEmail] = React.useState('')
+            const [password, setPassword] = React.useState('')
+
+            const handleSubmit = (event) => {
+                event.preventDefault()
+                console.log('email ' + email)
+                console.log('password ' + password)
+            }
+
             return (
                 <div className='container-login'>
                     <img src='img/imagem-login.png' alt='Uma mulher negra de cabelos crespos usando oculos e usando o computador'></img>
                     <section>
-                        <form>
+                        <form onSubmit={handleSubmit}>
                             <Titulo>Login</Titulo>
                             <Subtitulo>Boas-vindas! Faça seu login.</Subtitulo>
                             <CampoDeDigitacao label='E-mail ou usário'
                                 tipo='email'
-                                placeholder='Digite o seu e-mail ou usuário'/>
+                                placeholder='Digite o seu e-mail ou usuário'
+                                value={email}
+                                setValor={setEmail}
+                            />
                             <CampoDeDigitacao label='senha'
                                 tipo='password'
-                                placeholder='Digite sua senha' />
+                                placeholder='Digite sua senha' 
+                                value={password}
+                                setValor={setPassword}/>
                             <Botao>Login</Botao>
                         </form>
                     </section>
